<resources>
    <string name="app_name">Registro de Solicitud</string>
    <string name="tittle">Confirma Datos</string>

    <string name="nameComplete">Nombre Completo</string>
    <string name="tittleDateBorn">Fecha Nacimiento: </string>
    <string name="dateBorn">07/07/2007</string>
    <string name="tittlePhone">Telefono</string>
    <string name="phone">555-555</string>
    <string name="tittleEmail">Email</string>
    <string name="editData">Editar Datos</string>
    <string name="email">local@local.lc</string>
    <string name="tittleDescription">Descripcion</string>
    <string name="description">Khasdjnekjqjwehkasd
        sdjadkajshdjkh</string>
</resources>
